--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="textWrapper" style="padding: 15px 0; text-align:center;">*maximum percentage when setting 100% reinvestment</div>
+						<div class="textWrapper">*maximum percentage when setting 100% reinvestment</div>
 					</div>
 				</div>
 			</div>
